--- a/config/database.yml
+++ b/config/database.yml
@@ -9,34 +9,12 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: adaptive_twilio_development
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
-
+  adapter: sqlite3
+  database: db/db_development.sqlite3
+  
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: adaptive_twilio_test
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
-
-production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: adaptive_twilio_production
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  adapter: sqlite3
+  database: db/db_test.sqlite3
